force-app/main/default/objects/Order/fields/Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Service_Types__c</fullName>
    <description>Mapping of associated Order Product&apos;s Product Code to defined Service Type. Value is to be retrieved and updated to the Order.Service_Type__c field then to Account.Service_Type__c multi-select picklist fields via Apex scheduled jobs.</description>
    <label>Service Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anti Splash</fullName>
            </value>
            <value>
                <fullName>Apron/Bar Rentals</fullName>
            </value>
            <value>
                <fullName>AromaAire</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Bird Work</fullName>
            </value>
            <value>
                <fullName>CannonClean</fullName>
            </value>
            <value>
                <fullName>CannonControl</fullName>
            </value>
            <value>
                <fullName>CannonFresh</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Chemical Dispenser</fullName>
            </value>
            <value>
                <fullName>Diaper</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
            <value>
                <fullName>Disposal Exchange</fullName>
            </value>
            <value>
                <fullName>Disposal Onsite</fullName>
            </value>
            <value>
                <fullName>EcoClean</fullName>
            </value>
            <value>
                <fullName>EcoFresh</fullName>
            </value>
            <value>
                <fullName>Ecolo</fullName>
            </value>
            <value>
                <fullName>First Aid/AED</fullName>
            </value>
            <value>
                <fullName>Fly Light</fullName>
            </value>
            <value>
                <fullName>FreshAire</fullName>
            </value>
            <value>
                <fullName>Kaivac - STI</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Mat Rentals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Pest Special</fullName>
            </value>
            <value>
                <fullName>Rental Mop</fullName>
            </value>
            <value>
                <fullName>SaniClean</fullName>
            </value>
            <value>
                <fullName>Sani - Fixture Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>