force-app/main/default/objects/Order/fields/Service_Types_Count__c.field-meta.xml
<CustomField>
    <fullName>Service_Types_Count__c</fullName>
    <formula>IF(INCLUDES(Service_Types__c,&apos;Auto&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;CannonClean&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;CannonControl&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;CannonFresh&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Disposal&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Ecolo&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Life&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Pest&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Pest Special&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Other&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Soap&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Life&apos;),1,0) 
+ IF(INCLUDES(Service_Types__c,&apos;Vending&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Types Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>