force-app/main/default/objects/Order/fields/Ship_To_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact_Email__c</fullName>
    <formula>ShipToContact.Email</formula>
    <label>Ship To Contact Email</label>
    <type>Text</type>
</CustomField>