force-app/main/default/objects/Order/fields/Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Number__c</fullName>
    <label>Shipment Number</label>
    <type>TextArea</type>
</CustomField>