force-app/main/default/objects/Order/fields/Shipping_Address_Conga__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Conga__c</fullName>
    <formula>ShippingStreet + &apos; &apos; + ShippingCity + &apos; &apos; + ShippingState + &apos; &apos; + ShippingPostalCode + &apos; &apos; + ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Conga</label>
    <type>Text</type>
</CustomField>