force-app/main/default/objects/Order/fields/ShoppingCartEID__c.field-meta.xml
<CustomField>
    <fullName>ShoppingCartEID__c</fullName>
    <externalId>true</externalId>
    <label>ShoppingCartEID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>