force-app/main/default/objects/Order/fields/Standing_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Standing_Order_Number__c</fullName>
    <description>This is to Track the Standing Order Number from Accpac</description>
    <label>Standing Order #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>