force-app/main/default/objects/Order/fields/Surviving_Order__c.field-meta.xml
<CustomField>
    <fullName>Surviving_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surviving Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Surviving Order must have same account</errorMessage>
        <filterItems>
            <field>Order.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Surviving Order)</relationshipLabel>
    <relationshipName>SurvivingOrders</relationshipName>
    <type>Lookup</type>
</CustomField>