force-app/main/default/objects/Order/fields/Total_Active_Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Service_Amount__c</fullName>
    <label>Total Active Service Amount</label>
    <summarizedField>OrderItem.Service_Price_Per_Unit__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>