force-app/main/default/objects/Order/fields/Total_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Price__c</fullName>
    <label>Total Service Price</label>
    <summarizedField>OrderItem.Service_Price_Per_Unit__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>