force-app/main/default/objects/Order/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <description>From where the update of order is happening</description>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>