force-app/main/default/objects/Order/fields/User_Specified_Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>User_Specified_Estimated_Duration__c</fullName>
    <label>User-Specified Estimated Duration</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>