force-app/main/default/objects/Order/recordTypes/Regular_Order.recordType-meta.xml
<RecordType>
    <fullName>Regular_Order</fullName>
    <active>true</active>
    <description>Master record type for Order Object</description>
    <label>Regular Order</label>
</RecordType>