force-app/main/default/objects/Order/recordTypes/Shopping_Cart_Order.recordType-meta.xml
<RecordType>
    <fullName>Shopping_Cart_Order</fullName>
    <active>true</active>
    <description>Record Type for Orders created from Shopping Cart</description>
    <label>Shopping Cart Order</label>
</RecordType>