force-app/main/default/objects/Order/validationRules/Cannot_Create_On_Inactive_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_On_Inactive_Account</fullName>
    <active>true</active>
    <description>Prevents Orders on Inactive Accounts</description>
    <errorConditionFormula>Account.Inactive__c  = TRUE</errorConditionFormula>
    <errorMessage>Parent Account must be Active.</errorMessage>
</ValidationRule>