force-app/main/default/objects/Order/validationRules/check_if_is_related_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>check_if_is_related_contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsRelatedContact__c )</errorConditionFormula>
    <errorMessage>This is not a related contact.</errorMessage>
</ValidationRule>