force-app/main/default/objects/Order/validationRules/Pest_Emergency_Order_Cannot_be_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Pest_Emergency_Order_Cannot_be_Activated</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
ISCHANGED(Status), 
TEXT(Status) = $Setup.Field_Service_Settings__c.Order_Active_Stage__c, 
Pest_Emergency_Not_Invoicing__c 
)</errorConditionFormula>
    <errorMessage>This Order cannot be Activated at this time. Only when the PO Numbers are returned and the Work Order has been completed can this Order be Activated. Please contact your system administrator for more information.</errorMessage>
</ValidationRule>