force-app/main/default/objects/Order/validationRules/RequireStartandEndDates.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireStartandEndDates</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 AND(
  ISBLANK(TEXT(Season_Start_Month__c)),NOT(ISBLANK(TEXT(Season_End_Month__c)))
 ),
 AND(
  ISBLANK(TEXT(Season_End_Month__c)),NOT(ISBLANK(TEXT(Season_Start_Month__c)))
 )
)</errorConditionFormula>
    <errorMessage>Both Start and End dates are required when defining a season.</errorMessage>
</ValidationRule>