force-app/main/default/objects/Order/validationRules/Restrict_Pest_Emergency_Not_Invoicing.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Pest_Emergency_Not_Invoicing</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Pest_Emergency_Not_Invoicing__c, 
OR ( 
AND ( 
NOT(INCLUDES(Line_of_Businesses__c, &apos;Pest Control&apos;)), 
Emergency__c 
), 
AND ( 
INCLUDES(Line_of_Businesses__c, &apos;Pest Control&apos;), 
NOT(Emergency__c) 
), 
AND ( 
NOT(INCLUDES(Line_of_Businesses__c, &apos;Pest Control&apos;)), 
NOT(Emergency__c) 
) 
) 
)</errorConditionFormula>
    <errorMessage>The checkbox &quot;Pest Emergency - Not Invoicing&quot; is only valid for Pest Control Orders that are also Emergency. Please contact Customer Success if you feel this validation is in error.</errorMessage>
</ValidationRule>