force-app/main/default/objects/Order/validationRules/Validate_Account_and_Existing_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_and_Existing_Opp</fullName>
    <active>true</active>
    <description>Assert validation if the associated account is of prospect type and has no opportunities associated</description>
    <errorConditionFormula>Account.RecordType.Name = &apos;Prospect&apos;  &amp;&amp; OpportunityId = null</errorConditionFormula>
    <errorMessage>Unable to Create Order from a Prospect Account</errorMessage>
</ValidationRule>