force-app/main/default/objects/Order/listViews/Orders_Without_Inventory.listView-meta.xml
<ListView>
    <fullName>Orders_Without_Inventory</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Inventory_Allocated__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Allocated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Orders Without Inventory</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>